[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vASCII"
version = "1.0.0"
authors = [
    { name="Annie", email="backgroundsignals@gmail.com"}
]
description = "Creating videos and images using ASCII characters and ANSII color codes."
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Display",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT No Attribution License (MIT-0)",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "opencv-python==4.11.0.86",
    "pathlib==1.0.1",
    'audioop-lts==0.2.1; python_version > "3.11"',
    "pydub==0.25.1",
    "just_playback==0.1.8",
]


[project.urls]
Homepage = "https://github.com/antwaves/vASCII"
Issues = "https://github.com/antwaves/vASCII/issues"
